Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
  • Sign in / Register
  • VLC VLC
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,414
    • Issues 3,414
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 162
    • Merge requests 162
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • VideoLAN
  • VLCVLC
  • Issues
  • #2240

Closed
Open
Created Oct 24, 2008 by VLC_help@VLC_help

Changing stereo -> mono crashes with certain files

As pointed out in: http://forum.videolan.org/viewtopic.php?f=14&t=51669

There are some video files (transport stream MPEG-2 files) that crash/jam VLC if you change to Audio -> Audio device -> Mono during playback. It doesn't happen always, but it is very common with sample file. Tested with VLC 0.9.4 Win32.

Sample file: http://win.freebsd.md/vlc/ch11.avi

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking

VideoLAN code repository instance