Fix potential deadlock when changing audio channels (fixes #2240)